--- a/physics/coherism_refs.bib
+++ b/physics/coherism_refs.bib
@@ -360,3 +360,12 @@
   doi = {10.1103/RevModPhys.80.885},
   url = {https://doi.org/10.1103/RevModPhys.80.885}
 }
+
+@misc{AhmannZenodoCoherism2024,
+  author = {Ahmann, David},
+  title = {Coherism Paper Repository (archival release)},
+  year = {2024},
+  doi = {10.5281/zenodo.17868263},
+  url = {https://doi.org/10.5281/zenodo.17868263},
+  note = {Versioned archive of manuscript source and reproducibility scripts}
+}
